[gd_scene load_steps=2 format=3 uid="uid://catl5jki51hqs"]

[ext_resource type="Script" path="res://Level/LevelScenes/CharacterEditor/ChooseOption/ChooseOption.gd" id="1_p2mrb"]

[node name="EditorOptions" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p2mrb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Equipment" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Equipment"

[node name="Customize" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Customize"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "<-"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Equipment" to="." method="_on_equipment_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Customize" to="." method="_on_customize_pressed"]
[connection signal="pressed" from="PanelContainer/Back" to="." method="_on_back_pressed"]
